--- a/style.css
+++ b/style.css
@@ -23,14 +23,31 @@ body {
   margin: 2rem 30rem;
 }
 .draggable {
-  height: 5rem;
-  width: 5rem;
+  min-width: 100px;
+  min-height: 100px;
+  max-width: 100px;
+  max-height: 100px;
   flex: auto;
   font-size: 4rem;
   margin: 1rem 1rem;
   cursor: move;
   transition: opacity 0.2s;
 }
+
+.dragged {
+  user-select: none;
+  opacity: 0.1;
+  cursor: default;
+  min-width: 100px;
+  min-height: 100px;
+  max-width: 100px;
+  max-height: 100px;
+  flex: auto;
+  margin: 1rem 1rem;
+  transition: opacity 0.2s;
+
+}
+
 .draggable:hover {
   opacity: 0.5;
 }
@@ -66,12 +83,9 @@ body {
 .droppable.dropped i {
   pointer-events: none;
 }
-.draggable.dragged {
-  user-select: none;
-  opacity: 0.1;
-  cursor: default;
-}
-.draggable.dragged:hover {
+
+
+.dragged:hover {
   opacity: 0.1;
 }
 
@@ -91,3 +105,12 @@ h1 {
 }
 
 
+/* -------------------------------------------------- */
+
+.morango {
+  background-image: url('./images/metais.png');
+  height: 20px;
+  width: 20px;
+  display: block;
+  /* Other styles here */
+}
