--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 body {
   font-family: "Luckiest Guy";
-  background-color: rgb(255, 170, 206);
+  background: #4e54c8;
   
 }
 .draggable-elements {
@@ -105,12 +105,5 @@ h1 {
 }
 
 
-/* -------------------------------------------------- */
+/* ------------------------------------------------ */
 
-.morango {
-  background-image: url('./images/metais.png');
-  height: 20px;
-  width: 20px;
-  display: block;
-  /* Other styles here */
-}
