--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@
 
 body {
   font-family: "Luckiest Guy";
-  background: #4e54c8;
+  /* background: #4e54c8; */
+  background-image: url(./images/background.png);
+  background-size: 100%;
   
 }
 .draggable-elements {
@@ -98,8 +100,9 @@ body {
 
 h1 {
   text-align: center;
-  margin: 30px;
-  font-size: 40px;
+  margin-top:  20px;
+  margin-left: 60px;
+  font-size: 50px;
   color: white;
   text-shadow: 0 0.1em 20px black, 0.05em -0.03em 0 black, 0.05em 0.005em 0 black, 0em 0.08em 0 black, 0.05em 0.08em 0 black, 0px -0.03em 0 black, -0.03em -0.03em 0 black, -0.03em 0.08em 0 black, -0.03em 0 0 black;
 }
