--- a/style.css
+++ b/style.css
@@ -77,11 +77,25 @@ body {
 .dragged:hover {
   opacity: 0.1;
 }
+.win{
 
-@media (max-width: 600px) {
-  html { font-size: 14px; }
-  .draggable-elements { margin: 1.5rem; }
+  font-size: 200px;
+  margin-top: 300px;
+  color: white;
+  text-shadow: 0 0.1em 20px black, 0.05em -0.03em 0 black, 0.05em 0.005em 0 black, 0em 0.08em 0 black, 0.05em 0.08em 0 black, 0px -0.03em 0 black, -0.03em -0.03em 0 black, -0.03em 0.08em 0 black, -0.03em 0 0 black;
+  animation: bop 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+
 }
+
+.fundo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  
+}
+
+
 
 /* -------------------------------------------- */
 
@@ -92,6 +106,7 @@ h1 {
   font-size: 50px;
   color: white;
   text-shadow: 0 0.1em 20px black, 0.05em -0.03em 0 black, 0.05em 0.005em 0 black, 0em 0.08em 0 black, 0.05em 0.08em 0 black, 0px -0.03em 0 black, -0.03em -0.03em 0 black, -0.03em 0.08em 0 black, -0.03em 0 0 black;
+  animation: bop 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards infinite alternate;
 }
 
 
@@ -121,6 +136,7 @@ h1 {
   25%  {transform: scale(0.9);}
   75%  {transform: scale(1.1);}
 }
+
 @keyframes wiggle {
   0% { transform: rotate(0deg); }
  80% { transform: rotate(0deg); }
@@ -129,3 +145,17 @@ h1 {
 100% { transform: rotate(0deg); }
 }
 
+@keyframes bop {
+  0% {
+    transform: scale(0.9);
+  }
+  50%,
+  100% {
+    transform: scale(1);
+  }
+}
+
+@media (max-width: 600px) {
+  html { font-size: 14px; }
+  .draggable-elements { margin: 1.5rem; }
+}
