--- a/style.css
+++ b/style.css
@@ -14,7 +14,13 @@ body {
 }
 .draggable-elements {
   display: flex;
-  margin: 2rem 20rem;
+  margin: 1.5rem 20rem;
+  background-color: antiquewhite;
+  border-style: groove;
+  border-radius: 20px;
+  border-width: 10px;
+  border-color: chocolate;
+  
 }
 .draggable {
   min-width: 100px;
